--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.7",
     "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
